Added Staticfiles configuration, font family, css file

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,7 @@
-ECHO ist eingeschaltet (ON).
+.main-title {
+  font-family: "Ribeye";
+}
+
+.secondary-title {
+  font-family: "Aguafina-Script";
+}
