--- a/core/templates/components/libraries.html
+++ b/core/templates/components/libraries.html
@@ -2,5 +2,10 @@
   href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
   rel="stylesheet"
 />
+<link
+  href="https://fonts.googleapis.com/css?family=Ribeye|Aguafina-Script"
+  rel="stylesheet"
+/>
+<link href="{{ url_for('static', path='css/main.css') }}" rel="stylesheet" />
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
