--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <h1>Landing {{ result }}</h1>
-    <h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
+    <h1
+      x-data="{ message: 'I ❤️ Alpine' }"
+      x-text="message"
+      class="main-title text-2xl shadow-lg"
+    ></h1>
   </body>
 </html>
