--- a/core/templates/components/libraries.html
+++ b/core/templates/components/libraries.html
@@ -1,11 +1,16 @@
+<script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
 <link
-  href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-  rel="stylesheet"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Ribeye|Aguafina-Script"
+  href="https://fonts.googleapis.com/css?family=Ribeye|Aguafina-Script|Orbitron"
   rel="stylesheet"
 />
 <link href="{{ url_for('static', path='css/main.css') }}" rel="stylesheet" />
-<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-<script src="https://unpkg.com/scrollreveal"></script>
+<script
+  defer
+  src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
+  type="text/javascript"
+></script>
+<script
+  src="{{ url_for('static', path='js/index.js') }}"
+  type="text/javascript"
+></script>
+<script src="https://unpkg.com/scrollreveal@4"></script>
