--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
+@import url("btn.css");
+@import url("svg.css");
+@import url("theme.css");
+@import url("typography.css");
 :root {
   --primary-font-color: #292831;
   --secondary-font-color: #7a78ff;
@@ -5,36 +9,4 @@
   --primary-bg-color: #393939;
   --secondary-bg-color: #ff9274;
   --tertiary-bg-color: #b2b2b2;
-}
-
-.primary-title {
-  font-family: "Ribeye";
-}
-
-.secondary-title {
-  font-family: "Aguafina-Script";
-}
-
-.primary-bg {
-  background-color: var(--primary-bg-color);
-}
-
-.secondary-bg {
-  background-color: var(--secondary-bg-color);
-}
-
-.tertiary-bg {
-  background-color: var(--tertiary-bg-color);
-}
-
-.primary-color {
-  color: var(--primary-font-color);
-}
-
-.secondary-color {
-  color: var(--secondary-font-color);
-}
-
-.tertiary-color {
-  color: var(--tertiary-font-color);
 }
