Added Header, Header Primary Title, Secondary Title, Text, Cta Btn, changed navbar from main landing to header

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,8 @@
 @import url("svg.css");
 @import url("theme.css");
 @import url("typography.css");
+@import url("header.css");
+
 :root {
   --primary-font-color: #292831;
   --secondary-font-color: #7a78ff;
