--- a/core/templates/components/svg/nav-arrow.html
+++ b/core/templates/components/svg/nav-arrow.html
@@ -9,7 +9,7 @@
   viewBox="0 0 365.07 365.07"
   style="enable-background: new 0 0 365.07 365.07"
   xml:space="preserve"
-  class="absolute left-1/4 top-2 z-50 transform rotate-45"
+  class="absolute left-1/4 top-2 z-50 transform rotate-[25deg]"
 >
   <g>
     <g>
