--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    {% include
-    '/components/svg/nav-arrow.html' %} {% include '/components/header.html' %}
+    {% include '/components/svg/nav-arrow.html' %} {% include
+    '/components/header.html' %}
   </body>
 </html>
