--- a/core/templates/landing.html
+++ b/core/templates/landing.html
@@ -10,5 +10,8 @@
   <body>
     {% include '/components/svg/nav-arrow.html' %} {% include
     '/components/header.html' %}
+    <main>
+      {% include '/components/sections/how.html' %}
+    </main>
   </body>
 </html>
